# spExam-assignment

./: Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  Environment.cpp  Environment.h  GlobalState.cpp  GlobalState.h  Grapher.cpp  Grapher.h  Molecule.cpp  Molecule.h  Observer.h  PrettyPrinter.cpp  PrettyPrinter.h  README.md  Reaction.cpp  Reaction.h  StochasticSimulation.cpp  StochasticSimulation.h  Vessel.cpp  Vessel.h  listing.aux  listing.tex  local_history.patch  main.cpp  stochastic.pptx  trajectory.csv  trajectory_better.csv
Results/: Benchmarking SEIHR_50sims.txt
Test/: Test.cpp
